IMPROVEMENT:  Z index fix and alignment fix

--- a/assets/css/admin/admin.css
+++ b/assets/css/admin/admin.css
@@ -1435,6 +1435,9 @@ a.awsm-plugin-item p {
 .post-type-awsm_job_application .postbox * {
 	box-sizing: border-box;
 }
+.post-type-awsm_job_application .postbox .wp-switch-editor{
+	box-sizing: content-box;
+}
 
 .post-type-awsm_job_application .postbox a {
 	transition: all 0.3s ease;
@@ -1834,6 +1837,7 @@ textarea.awsm-form-control {
 	opacity: 0;
 	visibility: hidden;
 	transition: all 0.3s ease;
+	z-index: 10;
 }
 
 .awsm-dropdown-toggle:focus ~ .awsm-dropdown-items {
